# minimal-fmt

./: .cmake-format.yaml  CMakeLists.txt  Makefile  README.md  main.cpp
